// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The delivery records api stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "LambdaRestApiEndpoint7EDBC694": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "DeliveryRecordsApi",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "DeliveryRecordsApiStage",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "DeliveryRecordsApi": {
      "Properties": {
        "ApiKeySourceType": "HEADER",
        "Description": "api for accessing delivery records in salesforce",
        "Name": "delivery-records-api-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "DeliveryRecordsApiAnyMethod": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "DeliveryRecordsApiLambda",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
<<<<<<< HEAD
          "Ref": "DeliveryRecordsApiProxyResource",
=======
          "Fn::GetAtt": [
            "DeliveryRecordsApi",
            "RootResourceId",
          ],
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
        },
        "RestApiId": {
          "Ref": "DeliveryRecordsApi",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "DeliveryRecordsApiBasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DeliveryRecordsApiDomainName",
        },
        "RestApiId": {
          "Ref": "DeliveryRecordsApi",
        },
        "Stage": {
          "Ref": "DeliveryRecordsApiStage",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DeliveryRecordsApiCloudWatchRole": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "DeliveryRecordsApiDNSRecord": {
      "Properties": {
<<<<<<< HEAD
        "HostedZoneId": "Z1E4V12LQGXFEC",
        "Name": "delivery-records-api-code.membership.guardianapis.com",
=======
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "delivery-records-api-code.support.guardianapis.com",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DeliveryRecordsApiDomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
<<<<<<< HEAD
    "DeliveryRecordsApiDefaultPolicy": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/CODE/delivery-records-api/delivery-records-api.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/delivery-records-api",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/delivery-records-api/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/CODE/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DeliveryRecordsApiDefaultPolicy",
        "Roles": [
          {
            "Ref": "DeliveryRecordsApiRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DeliveryRecordsApiDeployment": {
      "DependsOn": [
        "DeliveryRecordsApiAnyMethod",
        "DeliveryRecordsApiProxyResource",
        "LambdaRestApiANYC3C9D364",
=======
    "DeliveryRecordsApiDeployment": {
      "DependsOn": [
        "LambdaRestApiproxyANY486C4D1F",
        "DeliveryRecordsApiProxyResource",
        "DeliveryRecordsApiAnyMethod",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
      ],
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "Description": "api for accessing delivery records in salesforce",
        "RestApiId": {
          "Ref": "DeliveryRecordsApi",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "DeliveryRecordsApiDomainName": {
      "Properties": {
<<<<<<< HEAD
        "DomainName": "delivery-records-api-code.membership.guardianapis.com",
=======
        "DomainName": "delivery-records-api-code.support.guardianapis.com",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
<<<<<<< HEAD
              ":certificate/c1efc564-9ff8-4a03-be48-d1990a3d79d2",
=======
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
            ],
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
<<<<<<< HEAD
    "DeliveryRecordsApiKey": {
      "Properties": {
        "Enabled": true,
        "Name": "delivery-records-api-key-CODE",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "DeliveryRecordsApi",
            },
            "StageName": {
              "Ref": "DeliveryRecordsApiStage",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
    "DeliveryRecordsApiLambda": {
      "DependsOn": [
        "DeliveryRecordsApiDefaultPolicy",
=======
    "DeliveryRecordsApiLambda": {
      "DependsOn": [
        "LambdaServiceRoleDefaultPolicyDAE46E21",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
        "DeliveryRecordsApiRole",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
<<<<<<< HEAD
          "S3Key": "membership/CODE/delivery-records-api/delivery-records-api.jar",
=======
          "S3Key": "support/CODE/delivery-records-api/delivery-records-api.jar",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
        },
        "Description": "api for accessing delivery records in salesforce",
        "Environment": {
          "Variables": {
            "APP": "delivery-records-api",
            "NODE_OPTIONS": "--enable-source-maps",
<<<<<<< HEAD
            "STACK": "membership",
=======
            "STACK": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
            "STAGE": "CODE",
            "Stage": "CODE",
          },
        },
        "FunctionName": "delivery-records-api-CODE",
        "Handler": "com.gu.delivery_records_api.Handler::handle",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1536,
        "Role": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiRole",
            "Arn",
          ],
        },
        "Runtime": "java21",
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "DeliveryRecordsApiProxyResource": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "DeliveryRecordsApi",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "DeliveryRecordsApi",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "DeliveryRecordsApiRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DeliveryRecordsApiStage": {
      "DependsOn": [
        "LambdaRestApiAccount4E23441E",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "DeliveryRecordsApiDeployment",
        },
        "RestApiId": {
          "Ref": "DeliveryRecordsApi",
        },
        "StageName": "CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "DeliveryRecordsApiUsagePlan": {
      "Properties": {
        "ApiStages": [
          {
            "ApiId": {
              "Ref": "DeliveryRecordsApi",
            },
            "Stage": {
              "Ref": "DeliveryRecordsApiStage",
            },
            "Throttle": {},
          },
        ],
        "Description": "REST endpoints for delivery-records-api",
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "UsagePlanName": "delivery-records-api-CODE",
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "LambdaRestApiANYApiPermissionTestdeliveryrecordsapiCODELambdaRestApiAF1B487AANYC730A87E": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiLambda",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "DeliveryRecordsApi",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "LambdaRestApiANYApiPermissiondeliveryrecordsapiCODELambdaRestApiAF1B487AANYF528B096": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiLambda",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "DeliveryRecordsApi",
              },
              "/",
              {
                "Ref": "DeliveryRecordsApiStage",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
<<<<<<< HEAD
    "LambdaRestApiANYC3C9D364": {
=======
    "LambdaRestApiAccount4E23441E": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "DeliveryRecordsApi",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiCloudWatchRole",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "LambdaRestApiApiKeyB5CCCA11": {
      "Properties": {
        "Enabled": true,
        "Name": "delivery-records-api-key-CODE",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "DeliveryRecordsApi",
            },
            "StageName": {
              "Ref": "DeliveryRecordsApiStage",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
    "LambdaRestApiUsagePlanUsagePlanKeyResourcedeliveryrecordsapiCODELambdaRestApiApiKey7834462D595229F7": {
      "Properties": {
        "KeyId": {
          "Ref": "LambdaRestApiApiKeyB5CCCA11",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "DeliveryRecordsApiUsagePlan",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "LambdaRestApiproxyANY486C4D1F": {
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "DeliveryRecordsApiLambda",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
<<<<<<< HEAD
          "Fn::GetAtt": [
            "DeliveryRecordsApi",
            "RootResourceId",
          ],
=======
          "Ref": "DeliveryRecordsApiProxyResource",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
        },
        "RestApiId": {
          "Ref": "DeliveryRecordsApi",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
<<<<<<< HEAD
    "LambdaRestApiAccount4E23441E": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "DeliveryRecordsApi",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiCloudWatchRole",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "LambdaRestApiUsagePlanUsagePlanKeyResourcedeliveryrecordsapiCODELambdaRestApiApiKey7834462D595229F7": {
      "Properties": {
        "KeyId": {
          "Ref": "DeliveryRecordsApiKey",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "DeliveryRecordsApiUsagePlan",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
=======
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
    "LambdaRestApiproxyANYApiPermissionTestdeliveryrecordsapiCODELambdaRestApiAF1B487AANYproxy3276478A": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiLambda",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "DeliveryRecordsApi",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "LambdaRestApiproxyANYApiPermissiondeliveryrecordsapiCODELambdaRestApiAF1B487AANYproxyEE88966F": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiLambda",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "DeliveryRecordsApi",
              },
              "/",
              {
                "Ref": "DeliveryRecordsApiStage",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
<<<<<<< HEAD
=======
    "LambdaServiceRoleDefaultPolicyDAE46E21": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/CODE/delivery-records-api/delivery-records-api.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/delivery-records-api",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/delivery-records-api/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/CODE/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LambdaServiceRoleDefaultPolicyDAE46E21",
        "Roles": [
          {
            "Ref": "DeliveryRecordsApiRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
  },
}
`;

exports[`The delivery records api stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "LambdaRestApiEndpoint7EDBC694": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "DeliveryRecordsApi",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "DeliveryRecordsApiStage",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiGateway5XXAlarmCDK11905206": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "delivery-records-api returned a 5XX response. Search the logs below for "error" for more information. Impact: delivery records for a subscription cannot be retrieved, so customers and CSRs may not be able to view delivery history in manage-frontend",
        "AlarmName": "delivery-records-api-PROD 5XX errors",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "delivery-records-api-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "5XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 60,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "DiagnosticLinks",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "lambda:",
                  {
                    "Ref": "DeliveryRecordsApiLambda",
                  },
                ],
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DeliveryRecordsApi": {
      "Properties": {
        "ApiKeySourceType": "HEADER",
        "Description": "api for accessing delivery records in salesforce",
        "Name": "delivery-records-api-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "DeliveryRecordsApiAnyMethod": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "DeliveryRecordsApiLambda",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
<<<<<<< HEAD
          "Ref": "DeliveryRecordsApiProxyResource",
=======
          "Fn::GetAtt": [
            "DeliveryRecordsApi",
            "RootResourceId",
          ],
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
        },
        "RestApiId": {
          "Ref": "DeliveryRecordsApi",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "DeliveryRecordsApiBasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DeliveryRecordsApiDomainName",
        },
        "RestApiId": {
          "Ref": "DeliveryRecordsApi",
        },
        "Stage": {
          "Ref": "DeliveryRecordsApiStage",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DeliveryRecordsApiCloudWatchRole": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "DeliveryRecordsApiDNSRecord": {
      "Properties": {
<<<<<<< HEAD
        "HostedZoneId": "Z1E4V12LQGXFEC",
        "Name": "delivery-records-api.membership.guardianapis.com",
=======
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "delivery-records-api.support.guardianapis.com",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DeliveryRecordsApiDomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
<<<<<<< HEAD
    "DeliveryRecordsApiDefaultPolicy": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/PROD/delivery-records-api/delivery-records-api.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/delivery-records-api",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/delivery-records-api/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/PROD/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DeliveryRecordsApiDefaultPolicy",
        "Roles": [
          {
            "Ref": "DeliveryRecordsApiRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DeliveryRecordsApiDeployment": {
      "DependsOn": [
        "DeliveryRecordsApiAnyMethod",
        "DeliveryRecordsApiProxyResource",
        "LambdaRestApiANYC3C9D364",
=======
    "DeliveryRecordsApiDeployment": {
      "DependsOn": [
        "LambdaRestApiproxyANY486C4D1F",
        "DeliveryRecordsApiProxyResource",
        "DeliveryRecordsApiAnyMethod",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
      ],
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "Description": "api for accessing delivery records in salesforce",
        "RestApiId": {
          "Ref": "DeliveryRecordsApi",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "DeliveryRecordsApiDomainName": {
      "Properties": {
<<<<<<< HEAD
        "DomainName": "delivery-records-api.membership.guardianapis.com",
=======
        "DomainName": "delivery-records-api.support.guardianapis.com",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
<<<<<<< HEAD
              ":certificate/c1efc564-9ff8-4a03-be48-d1990a3d79d2",
=======
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
            ],
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
<<<<<<< HEAD
    "DeliveryRecordsApiKey": {
      "Properties": {
        "Enabled": true,
        "Name": "delivery-records-api-key-PROD",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "DeliveryRecordsApi",
            },
            "StageName": {
              "Ref": "DeliveryRecordsApiStage",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
    "DeliveryRecordsApiLambda": {
      "DependsOn": [
        "DeliveryRecordsApiDefaultPolicy",
=======
    "DeliveryRecordsApiLambda": {
      "DependsOn": [
        "LambdaServiceRoleDefaultPolicyDAE46E21",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
        "DeliveryRecordsApiRole",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
<<<<<<< HEAD
          "S3Key": "membership/PROD/delivery-records-api/delivery-records-api.jar",
=======
          "S3Key": "support/PROD/delivery-records-api/delivery-records-api.jar",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
        },
        "Description": "api for accessing delivery records in salesforce",
        "Environment": {
          "Variables": {
            "APP": "delivery-records-api",
            "NODE_OPTIONS": "--enable-source-maps",
<<<<<<< HEAD
            "STACK": "membership",
=======
            "STACK": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
            "STAGE": "PROD",
            "Stage": "PROD",
          },
        },
        "FunctionName": "delivery-records-api-PROD",
        "Handler": "com.gu.delivery_records_api.Handler::handle",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1536,
        "Role": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiRole",
            "Arn",
          ],
        },
        "Runtime": "java21",
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "DeliveryRecordsApiProxyResource": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "DeliveryRecordsApi",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "DeliveryRecordsApi",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "DeliveryRecordsApiRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DeliveryRecordsApiStage": {
      "DependsOn": [
        "LambdaRestApiAccount4E23441E",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "DeliveryRecordsApiDeployment",
        },
        "RestApiId": {
          "Ref": "DeliveryRecordsApi",
        },
        "StageName": "PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "DeliveryRecordsApiUsagePlan": {
      "Properties": {
        "ApiStages": [
          {
            "ApiId": {
              "Ref": "DeliveryRecordsApi",
            },
            "Stage": {
              "Ref": "DeliveryRecordsApiStage",
            },
            "Throttle": {},
          },
        ],
        "Description": "REST endpoints for delivery-records-api",
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "UsagePlanName": "delivery-records-api-PROD",
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "FailureAlarm93B41FAF": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "DeliveryRecordsApiLambda",
              },
              " failed. Search the logs below for "error" for more information. Impact: delivery records for a subscription cannot be retrieved, so customers and CSRs may not be able to view delivery history in manage-frontend",
            ],
          ],
        },
        "AlarmName": "5XX rate from delivery-records-api-PROD",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "5XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 360,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "DiagnosticLinks",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "lambda:",
                  {
                    "Ref": "DeliveryRecordsApiLambda",
                  },
                ],
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
<<<<<<< HEAD
            "Value": "membership",
=======
            "Value": "support",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 2,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "LambdaRestApiANYApiPermissionTestdeliveryrecordsapiPRODLambdaRestApi5F186F97ANY82667530": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiLambda",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "DeliveryRecordsApi",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "LambdaRestApiANYApiPermissiondeliveryrecordsapiPRODLambdaRestApi5F186F97ANY9D8D89F1": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiLambda",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "DeliveryRecordsApi",
              },
              "/",
              {
                "Ref": "DeliveryRecordsApiStage",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
<<<<<<< HEAD
    "LambdaRestApiANYC3C9D364": {
=======
    "LambdaRestApiAccount4E23441E": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "DeliveryRecordsApi",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiCloudWatchRole",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "LambdaRestApiApiKeyB5CCCA11": {
      "Properties": {
        "Enabled": true,
        "Name": "delivery-records-api-key-PROD",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "DeliveryRecordsApi",
            },
            "StageName": {
              "Ref": "DeliveryRecordsApiStage",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "delivery-records-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
    "LambdaRestApiUsagePlanUsagePlanKeyResourcedeliveryrecordsapiPRODLambdaRestApiApiKey7FAC9DFE035E022C": {
      "Properties": {
        "KeyId": {
          "Ref": "LambdaRestApiApiKeyB5CCCA11",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "DeliveryRecordsApiUsagePlan",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "LambdaRestApiproxyANY486C4D1F": {
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "DeliveryRecordsApiLambda",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
<<<<<<< HEAD
          "Fn::GetAtt": [
            "DeliveryRecordsApi",
            "RootResourceId",
          ],
=======
          "Ref": "DeliveryRecordsApiProxyResource",
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
        },
        "RestApiId": {
          "Ref": "DeliveryRecordsApi",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
<<<<<<< HEAD
    "LambdaRestApiAccount4E23441E": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "DeliveryRecordsApi",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiCloudWatchRole",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "LambdaRestApiUsagePlanUsagePlanKeyResourcedeliveryrecordsapiPRODLambdaRestApiApiKey7FAC9DFE035E022C": {
      "Properties": {
        "KeyId": {
          "Ref": "DeliveryRecordsApiKey",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "DeliveryRecordsApiUsagePlan",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
=======
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
    "LambdaRestApiproxyANYApiPermissionTestdeliveryrecordsapiPRODLambdaRestApi5F186F97ANYproxy2675B264": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiLambda",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "DeliveryRecordsApi",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "LambdaRestApiproxyANYApiPermissiondeliveryrecordsapiPRODLambdaRestApi5F186F97ANYproxy36764E0B": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "DeliveryRecordsApiLambda",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "DeliveryRecordsApi",
              },
              "/",
              {
                "Ref": "DeliveryRecordsApiStage",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
<<<<<<< HEAD
=======
    "LambdaServiceRoleDefaultPolicyDAE46E21": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/PROD/delivery-records-api/delivery-records-api.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/delivery-records-api",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/delivery-records-api/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/PROD/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LambdaServiceRoleDefaultPolicyDAE46E21",
        "Roles": [
          {
            "Ref": "DeliveryRecordsApiRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
>>>>>>> 00c912c0d (delivery-records-api CDK migration)
  },
}
`;
